objects/amc__Purchase_Order__c.object
<CustomObject>
    <description>The Purchase Order Custom Object lets you keep a track of the POs that have been issued to suppliers relating to your Projects</description>
    <fields>
        <fullName>amc__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account this Purchase Order relates to</description>
        <inlineHelpText>Lookup to the Account this Purchase Order relates to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Amount_Outstanding__c</fullName>
        <description>Identifies the amount still outstanding on this Purchase Order. Formula: Amount - Amount Paid</description>
        <formula>amc__Amount__c -  amc__Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the amount still outstanding on this Purchase Order. Formula: Amount - Amount Paid</inlineHelpText>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Amount_Paid__c</fullName>
        <description>Identifies the &apos;Amount Claimed&apos; value of all related Expenses</description>
        <inlineHelpText>Identifies the &apos;Amount Claimed&apos; value of all related Expenses</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Amount__c</fullName>
        <description>Identifies the sum amount of all related Purchase Order Items</description>
        <inlineHelpText>Identifies the sum amount of all related Purchase Order Items</inlineHelpText>
        <label>Amount</label>
        <summarizedField>amc__Purchase_Order_Item__c.amc__Amount__c</summarizedField>
        <summaryForeignKey>amc__Purchase_Order_Item__c.amc__Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Attention__c</fullName>
        <description>Identifies who invoices/expenses relating to this Purchase Order should be addressed to</description>
        <inlineHelpText>Identifies who invoices/expenses relating to this Purchase Order should be addressed to</inlineHelpText>
        <label>Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact this Purchase Order relates to</description>
        <inlineHelpText>Lookup to the Contact this Purchase Order relates to</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Delivery_Date__c</fullName>
        <description>Identifies the expected Delivery Date for the Purchase Order</description>
        <inlineHelpText>Identifies the expected Delivery Date for the Purchase Order</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Delivery_Instructions__c</fullName>
        <description>Identifies any delivery instructions relating to this Purchase order</description>
        <inlineHelpText>Identifies any delivery instructions relating to this Purchase order</inlineHelpText>
        <label>Delivery Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Issued_Date__c</fullName>
        <description>Identifies the Issued Date of the Purchase Order</description>
        <inlineHelpText>Identifies the Issued Date of the Purchase Order</inlineHelpText>
        <label>Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Project this Purchase Order relates to</description>
        <inlineHelpText>Lookup to the Project this Purchase Order relates to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Status__c</fullName>
        <description>Identifies the status of the Purchase Order</description>
        <inlineHelpText>Identifies the status of the Purchase Order</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Paid - Partial</fullName>
                </value>
                <value>
                    <fullName>Paid - In Full</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Summary__c</fullName>
        <description>Identifies a summary of what is included in this Purchase Order</description>
        <inlineHelpText>Identifies a summary of what is included in this Purchase Order</inlineHelpText>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Type__c</fullName>
        <description>Identifies the Type of Purchase Order</description>
        <inlineHelpText>Identifies the Type of Purchase Order</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PO:{000000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>